--- a/maintainerr/config.yaml
+++ b/maintainerr/config.yaml
@@ -1,5 +1,5 @@
 name: "Maintainerr HA"
-version: "0.1.1"  # Increment version
+version: "0.1.1"
 slug: "maintainerr-homeassistant"
 description: "Maintenance tool for the Plex ecosystem"
 arch:
@@ -11,7 +11,7 @@ startup: services
 webui: http://[HOST]:[PORT:6246]
 map:
   - config:rw
-  - data:rw      # Add this line
+  - data:rw
 backup: true
 options:
   TZ: "Europe/Brussels"
