--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -1,9 +1,8 @@
 ARG BUILD_FROM
 FROM ghcr.io/jorenn92/maintainerr:latest
 
-# Copy entry script
-COPY run.sh /run.sh
-RUN chmod +x /run.sh
+# Copy entry script with executable permissions already set
+COPY --chmod=755 run.sh /run.sh
 
 # Redirect /opt/data to /data (which Home Assistant maps)
 RUN rm -rf /opt/data && ln -s /data /opt/data
