--- a/maintainerr/config.yaml
+++ b/maintainerr/config.yaml
@@ -1,5 +1,5 @@
 name: "Maintainerr"
-version: "0.1.2"
+version: "0.1.3"
 slug: "maintainerr-homeassistant"
 description: "Maintenance tool for the Plex ecosystem"
 arch:
@@ -10,7 +10,7 @@ ports:
 startup: services
 webui: http://[HOST]:[PORT:6246]
 map:
-  - data:/opt/data:rw
+  - addon_config:rw
 backup: hot
 options:
   TZ: "Europe/Brussels"
