--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -1,11 +1,11 @@
 ARG BUILD_FROM
 FROM ghcr.io/jorenn92/maintainerr:latest
 
-# Declare the volume so Home Assistant manages it
-VOLUME ["/opt/data"]
+# Remove the original /opt/data directory
+USER root
+RUN rm -rf /opt/data || true
 
-# Copy entry script with executable permissions
+# Copy entry script
 COPY --chmod=755 run.sh /run.sh
 
-# Run entry script
 CMD [ "/run.sh" ]
