--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -1,11 +1,15 @@
 ARG BUILD_FROM
 FROM ghcr.io/jorenn92/maintainerr:latest
 
-# Remove the original /opt/data directory
-USER root
-RUN rm -rf /opt/data || true
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# Copy entry script
+USER root
+
+# Backup supervisord config for reference (optional, useful for debugging)
+RUN cp /etc/supervisord.conf /etc/supervisord.conf.bak || true
+
+# Copy our startup wrapper
 COPY --chmod=755 run.sh /run.sh
 
-CMD [ "/run.sh" ]
+# Use our wrapper as container entrypoint
+CMD ["/run.sh"]
