--- a/maintainerr/config.yaml
+++ b/maintainerr/config.yaml
@@ -1,5 +1,5 @@
 name: "Maintainerr"
-version: "0.1.8"
+version: "0.1.9"
 slug: "maintainerr-homeassistant"
 description: "Maintenance tool for the Plex ecosystem"
 arch:
@@ -17,5 +17,7 @@ schema:
   TZ: "str"
   API_PORT: "int"
 host_network: true
+
+# Make Home Assistant give this add-on persistent storage access
 map:
   - data:rw
