--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -6,5 +6,5 @@ USER root
 # Copy our startup wrapper
 COPY --chmod=755 run.sh /run.sh
 
-# Use our wrapper as container entrypoint
-CMD ["/run.sh"]
+# Force our wrapper to run first (even if base image has its own ENTRYPOINT)
+ENTRYPOINT ["/run.sh"]
