--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -1,17 +1,14 @@
-# Use the official Maintainerr container as the base
+# Base on official Maintainerr image (includes s6-overlay)
 ARG BUILD_FROM=ghcr.io/jorenn92/maintainerr:latest
 FROM ${BUILD_FROM}
 
 USER root
-
-# Copy our startup script into container
-COPY --chmod=755 run.sh /run.sh
-
-# Make sure bash or sh exists
 SHELL ["/bin/sh", "-c"]
 
-# Ensure persistent data directory exists
+# Copy our startup script that will run before the app
+COPY --chmod=755 run.sh /etc/cont-init.d/00-persistent-data.sh
+
+# Ensure persistence directory exists
 RUN mkdir -p /data/maintainerr
 
-# Override entrypoint so our script runs first
-CMD [ "/run.sh" ]
+# Nothing else to override; s6 will start Maintainerr as usual
