Remove unnecessary USER and SHELL directives from Dockerfile

--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -2,13 +2,13 @@
 ARG BUILD_FROM=ghcr.io/jorenn92/maintainerr:latest
 FROM ${BUILD_FROM}
 
-USER root
-SHELL ["/bin/sh", "-c"]
-
 # Copy our startup script that will run before the app
 COPY --chmod=755 run.sh /etc/cont-init.d/00-persistent-data.sh
 
 # Ensure persistence directory exists
+RUN mkdir -p /data/maintainerr
+
+# Nothing else to override; s6 will start Maintainerr as usual
 RUN mkdir -p /data/maintainerr
 
 # Nothing else to override; s6 will start Maintainerr as usual
