Remove duplicate persistence directory creation in Dockerfile

--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -7,10 +7,10 @@ RUN mkdir -p /data/maintainerr
 
 # Set environment variable if supported by Maintainerr
 ENV MAINTAINERR_DATA_DIR=/data/maintainerr
-    && rm /tmp/maintainerr.zip
 
 # Copy our startup script that will run before the app
 COPY --chmod=755 run.sh /etc/cont-init.d/10-persistent-data.sh
 
 # Ensure persistence directory exists
+RUN mkdir -p /data/maintainerr
 RUN mkdir -p /data/maintainerr
