--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -1,4 +1,3 @@
-# Base on official Maintainerr image (includes s6-overlay)
 ARG BUILD_FROM=ghcr.io/jorenn92/maintainerr:latest
 FROM ${BUILD_FROM}
 
@@ -7,3 +6,9 @@ RUN mkdir -p /data/maintainerr
 
 # Set environment variable if supported by Maintainerr
 ENV MAINTAINERR_DATA_DIR=/data/maintainerr
+
+# Copy run.sh to the correct s6-overlay location
+COPY run.sh /etc/services.d/maintainerr/run
+
+# Make the script executable
+RUN chmod a+x /etc/services.d/maintainerr/run
