--- a/maintainerr/config.yaml
+++ b/maintainerr/config.yaml
@@ -1,5 +1,5 @@
-name: "Maintainerr HA"
-version: "0.2.6"  # Increment version
+name: "Maintainerr"
+version: "0.2.7"  # Increment version
 slug: "maintainerr-homeassistant"
 description: "Maintenance tool for the Plex ecosystem"
 arch:
