--- a/maintainerr/config.yaml
+++ b/maintainerr/config.yaml
@@ -1,8 +1,7 @@
-name: "Maintainerr"
-version: "0.2.8"  # Increment version
+name: "Maintainerr HA"
+version: "0.1.1"  # Increment version
 slug: "maintainerr-homeassistant"
 description: "Maintenance tool for the Plex ecosystem"
-init: false
 arch:
   - amd64
   - aarch64
