Refactor Dockerfile to improve structure; adjust ARG and COPY commands for clarity

--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -1,11 +1,11 @@
-ARG BUILD_FROM=ghcr.io/jorenn92/maintainerr:latest
-FROM ${BUILD_FROM}
+ARG BUILD_FROM
+FROM ghcr.io/jorenn92/maintainerr:latest
 
-# Copy the run script and set executable permission at the same time
-COPY --chmod=755 run.sh /run.sh
+# Copy entry script
+COPY run.sh /run.sh
+RUN chmod +x /run.sh
 
-# Set the command to run our script on startup
-CMD [ "/run.sh" ]
+# Redirect /opt/data to /data (which Home Assistant maps)
 RUN rm -rf /opt/data && ln -s /data /opt/data
 
 # Run entry script
