Update Dockerfile to copy script with permissions

--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -1,12 +1,8 @@
 ARG BUILD_FROM
 FROM ghcr.io/jorenn92/maintainerr:latest
 
-# Copy entry script
-COPY run.sh /run.sh
-RUN chmod +x /run.sh
-
-# Redirect /opt/data to /data (which Home Assistant maps)
-RUN rm -rf /opt/data && ln -s /data /opt/data
+# Copy entry script with executable permissions
+COPY --chmod=755 run.sh /run.sh
 
 # Run entry script
 CMD [ "/run.sh" ]
