Refactor Dockerfile and run.sh for improved entrypoint handling; add persistence script for data migration

--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -4,5 +4,5 @@ FROM ghcr.io/jorenn92/maintainerr:latest
 # Copy entry script with executable permissions
 COPY --chmod=755 run.sh /run.sh
 
-# Run entry script
-CMD [ "/run.sh" ]
+# Ensure our wrapper runs first and then chains to upstream
+ENTRYPOINT [ "/run.sh" ]
