--- a/maintainerr/config.yaml
+++ b/maintainerr/config.yaml
@@ -1,5 +1,5 @@
 name: "Maintainerr"
-version: "0.1.2"
+version: "0.1.3"
 slug: "maintainerr"
 description: "Maintenance tool for the Plex ecosystem"
 arch:
@@ -19,3 +19,5 @@ schema:
   TZ: "str"
   API_PORT: "int"
 host_network: true
+privileged:
+  - SYS_ADMIN
