Update Dockerfile to use new base image

--- a/maintainerr/Dockerfile
+++ b/maintainerr/Dockerfile
@@ -1,5 +1,5 @@
 ARG BUILD_FROM
-FROM ghcr.io/jorenn92/maintainerr:latest
+FROM ghcr.io/maintainerr/maintainerr
 
 # Copy entry script with executable permissions
 COPY --chmod=755 run.sh /run.sh
