Revise Maintainerr config with latest version details
Updated configuration for Maintainerr with latest version and additional fields.

--- a/maintainerr/config.yaml
+++ b/maintainerr/config.yaml
@@ -1,22 +1,43 @@
 name: "Maintainerr"
-version: "0.1.12"
-slug: "maintainerr"
-description: "Maintenance tool for the Plex ecosystem"
+slug: "Maintainerr"
+version: "latest"
+description: >
+  Maintenance tool for the Plex ecosystem
+url: "https://github.com/Maintainerr/Maintainerr"
+
 arch:
   - amd64
-  - aarch64
-ports:
-  6246/tcp: 6246
-startup: services
-webui: http://[HOST]:[PORT:6246]
-map:
-  - config:rw
-backup: hot
-options:
-  TZ: "Europe/Brussels"
-  API_PORT: "6246"
-schema:
-  TZ: "str"
-  API_PORT: "int"
-host_network: true
+  # add more if/when the image supports them:
+  # - aarch64
+  # - armv7
+  # - armhf
+  # - i386
 
+startup: application
+boot: auto
+
+# Expose the LibraryDownloadarr web UI
+ports:
+  "6246/tcp": 6246
+ports_description:
+  "6246/tcp": "Maintainerr web interface"
+
+# Web UI / health checks
+webui: "http://[HOST]:[PORT:6246]/"
+watchdog: "tcp://[HOST]:[PORT:6246]"
+
+# Environment values MUST be strings
+environment:
+  PORT: "6246"
+  LOG_LEVEL: "info"
+  # Use HA's standard persistent volume for add-ons
+  DATABASE_PATH: "/data/maintainerr.db"
+  TZ: "America/New_York"
+
+# IMPORTANT: no tag here (no :latest)
+# Supervisor will automatically append :<version>, so this becomes
+# ghcr.io/kikootwo/librarydownloadarr:latest
+image: "ghcr.io/maintainerr/maintainerr" 
+
+# Treat this as a generic container image
+legacy: true
